feat: JWT 확인하는 logging 추가